--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -4,6 +4,7 @@
   --dark-text-color: #212121;
   --light-text-color: #616161;
   --large-font-size: .32rem;
+  --medium-font-size: .28rem;
   --small-font-size: .24rem;
   --header-height: .86rem;
 }
