--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -1,6 +1,7 @@
 /* CSS 全局变量 */
 :root {
   --bg-color: #00bcd4;
+  --bg-light-color: #f5f5f5;
   --dark-text-color: #212121;
   --light-text-color: #616161;
   --large-font-size: .32rem;
